# tcco2-accuracy

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  data_dictionary.csv  data_dictionary.md  llms.txt  pyproject.toml  requirements.txt  streamlit_app.py
.pytest_tmp/: test_export_conway_rdata_roundcurrent  test_workflows_deterministiccurrent
.tmp/: test_workflows_deterministiccurrent
Code/: 1_conway_tcco2_cleaning_do.do  3_tcco2_uncertainty_and_simulation_do.do  BWL-DAB TcCO2 Analysis Do file.do  DAB TcCO2 Analysis Do file.do  In Silico TcCO2 Sim.do  Master TcCO2 do file.do
Conway Meta/: data.Rdata
Data/: AGENTS.md  PROVENANCE.md  TcCO2 meta-analysis.Rmd  conway_studies.csv  conway_studies.xlsx  conway_studies_template.xlsx  data_counts.csv  paco2_public_prior.csv
Drafts/: 12_30 DAB TcCO2 Letter.docx  2025-12-17 BL TcCO2 Letter.docx  2025-12-17 DAB TcCO2 Letter.docx  2025-12-23 BWL TcCO2 Letter.docx  2025-12-23 DAB TcCO2 Letter.docx  2025-12-24 BWL TcCO2 Letter.docx  AGENTS.md  ~$25-12-23 BWL TcCO2 Letter.docx  ~$25-12-24 BWL TcCO2 Letter.docx  ~$_30 DAB TcCO2 Letter.docx
app/: AGENTS.md  __init__.py  streamlit_app.py
artifacts/: AGENTS.md  bootstrap_params.csv  bootstrap_summary.md  conditional_classification_t45.csv  conditional_classification_t45.md  conway_table1_fixture_summary.md  figure_misclassification_vs_paco2.csv  figure_paco2_distribution_bins.csv  inference_demo.md  manuscript_confusion_matrix.csv  manuscript_confusion_matrix.md  manuscript_parameters.csv  manuscript_parameters.md  manuscript_results_snippets.md  manuscript_table1.csv  manuscript_table1.md  manuscript_table2_two_stage.csv  manuscript_table2_two_stage.md  manuscript_table3_prediction_intervals.csv  manuscript_table3_prediction_intervals.md  meta_loa_check.md  paco2_distribution_summary.md  simulation_summary.md  two_stage_summary.md  (+1 more)
(+201 files in other folders)
