[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcco2-accuracy"
version = "0.0.0"
description = "Python port of TcCO2 accuracy meta-analysis and simulation"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "python/src"}

[tool.setuptools.packages.find]
where = ["python/src"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
