[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcco2-accuracy"
version = "0.0.0"
description = "TcCO2 to PaCO2 agreement meta-analysis, simulation, and static browser app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.1",
    "pyreadr>=0.5",
    "scipy>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-playwright>=0.5",
    "ruff>=0.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tcco2_accuracy"]
